--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -10,6 +10,9 @@
         <item
             android:id="@+id/action_sort_by_popularity"
             android:title="@string/menu_sort_by_popularity"/>
+        <item
+            android:id="@+id/action_favorite_movies"
+            android:title="@string/menu_favorite_movies" />
     </group>
 
     <item
