--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -6,25 +6,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <View
+        android:id="@+id/divider_trailer_item"
+        android:layout_width="128dp"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/iv_play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/ListItem"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:layout_constraintTop_toTopOf="@id/divider_trailer_item"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:contentDescription="@string/play_trailer"/>
 
     <TextView
         android:id="@+id/tv_trailer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        style="@style/ListItem.TrailerTitle"
         tools:text="Trailer 1"
         app:layout_constraintBottom_toBottomOf="@+id/iv_play"
         app:layout_constraintStart_toEndOf="@+id/iv_play"
         app:layout_constraintTop_toTopOf="@+id/iv_play" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
